--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
-
 {
-  "name": "meteor-hello-react",
+  "name": "meteor-data-and-react",
   "version": "0.0.0",
   "dependencies": {
     "react": "^0.14.6",
