--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
     "react-komposer": "^1.3.0",
-    "react-mounter": "^1.1.0"
+    "react-mounter": "^1.1.0",
+    "react-no-ssr": "^1.0.1"
   },
   "private": true
 }
